@@ -6,8 +6,7 @@ OLD_MAN_NAME=trietool-0.2.1
 
 install-data-hook:
 	rm -f $(DESTDIR)$(mandir)/man1/$(OLD_MAN_NAME)
-	$(LN_S) $(mandir)/man1/trietool.1 \
-	  $(DESTDIR)$(mandir)/man1/$(OLD_MAN_NAME)
+	$(LN_S) trietool.1 $(DESTDIR)$(mandir)/man1/$(OLD_MAN_NAME)
 
 uninstall-hook:
 	rm -f $(DESTDIR)$(mandir)/man1/$(OLD_MAN_NAME)
